feat(pages): Add item list page and table component for displaying transactions

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,10 +43,19 @@
 
 					<li>
 						<a
-							href="/"
+							href="/list"
 							class="flex items-center gap-2 text-white border-b-2 border-transparent hover:border-black hover:text-black transition duration-200">
 							<i class="material-icons text-lg">table_view</i>
 							<span>Item List</span>
+						</a>
+					</li>
+
+					<li>
+						<a
+							href="/"
+							class="flex items-center gap-2 text-white border-b-2 border-transparent hover:border-black hover:text-black transition duration-200">
+							<i class="material-icons text-lg">storage</i>
+							<span>Database</span>
 						</a>
 					</li>
 				</ul>
